src/transpiler/pinescript/generated/grammar/PinescriptParser.ts
// Generated from grammar/PinescriptParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PinescriptParserListener } from "./PinescriptParserListener";
import { PinescriptParserVisitor } from "./PinescriptParserVisitor";


export class PinescriptParser extends Parser {
	public static readonly BEGIN_BLOCK = 1;
	public static readonly END_BLOCK = 2;
	public static readonly END_STATEMENT = 3;
	public static readonly AND = 4;
	public static readonly AS = 5;
	public static readonly BREAK = 6;
	public static readonly BY = 7;
	public static readonly CONST = 8;
	public static readonly CONTINUE = 9;
	public static readonly ELSE = 10;
	public static readonly EXPORT = 11;
	public static readonly FALSE = 12;
	public static readonly FOR = 13;
	public static readonly IF = 14;
	public static readonly IMPORT = 15;
	public static readonly IN = 16;
	public static readonly INPUT = 17;
	public static readonly METHOD = 18;
	public static readonly NOT = 19;
	public static readonly OR = 20;
	public static readonly SERIES = 21;
	public static readonly SIMPLE = 22;
	public static readonly SWITCH = 23;
	public static readonly TO = 24;
	public static readonly TYPE = 25;
	public static readonly TRUE = 26;
	public static readonly VAR = 27;
	public static readonly VARIP = 28;
	public static readonly WHILE = 29;
	public static readonly LPAR = 30;
	public static readonly RPAR = 31;
	public static readonly LSQB = 32;
	public static readonly RSQB = 33;
	public static readonly LESS = 34;
	public static readonly GREATER = 35;
	public static readonly EQUAL = 36;
	public static readonly EQEQUAL = 37;
	public static readonly NOTEQUAL = 38;
	public static readonly LESSEQUAL = 39;
	public static readonly GREATEREQUAL = 40;
	public static readonly RARROW = 41;
	public static readonly DOT = 42;
	public static readonly COMMA = 43;
	public static readonly COLON = 44;
	public static readonly QUESTION = 45;
	public static readonly PLUS = 46;
	public static readonly MINUS = 47;
	public static readonly STAR = 48;
	public static readonly SLASH = 49;
	public static readonly PERCENT = 50;
	public static readonly PLUSEQUAL = 51;
	public static readonly MINEQUAL = 52;
	public static readonly STAREQUAL = 53;
	public static readonly SLASHEQUAL = 54;
	public static readonly PERCENTEQUAL = 55;
	public static readonly COLONEQUAL = 56;
	public static readonly NAME = 57;
	public static readonly NUMBER = 58;
	public static readonly STRING = 59;
	public static readonly COLOR = 60;
	public static readonly NEWLINE = 61;
	public static readonly WS = 62;
	public static readonly COMMENT = 63;
	public static readonly ERROR_TOKEN = 64;
	public static readonly RULE_start = 0;
	public static readonly RULE_start_script = 1;
	public static readonly RULE_start_expression = 2;
	public static readonly RULE_start_comments = 3;
	public static readonly RULE_statements = 4;
	public static readonly RULE_statement = 5;
	public static readonly RULE_compound_statement_with_block = 6;
	public static readonly RULE_simple_statement = 7;
	public static readonly RULE_compound_assignment = 8;
	public static readonly RULE_compound_variable_initialization = 9;
	public static readonly RULE_compound_name_initialization = 10;
	public static readonly RULE_compound_tuple_initialization = 11;
	public static readonly RULE_compound_reassignment = 12;
	public static readonly RULE_compound_augassignment = 13;
	public static readonly RULE_function_declaration = 14;
	public static readonly RULE_parameter_list = 15;
	public static readonly RULE_parameter_definition = 16;
	public static readonly RULE_type_declaration = 17;
	public static readonly RULE_field_definitions = 18;
	public static readonly RULE_field_definition = 19;
	public static readonly RULE_structure = 20;
	public static readonly RULE_structure_statement = 21;
	public static readonly RULE_structure_expression = 22;
	public static readonly RULE_if_structure = 23;
	public static readonly RULE_if_structure_elif = 24;
	public static readonly RULE_if_structure_else = 25;
	public static readonly RULE_elif_structure = 26;
	public static readonly RULE_elif_structure_elif = 27;
	public static readonly RULE_elif_structure_else = 28;
	public static readonly RULE_else_block = 29;
	public static readonly RULE_for_structure = 30;
	public static readonly RULE_for_structure_to = 31;
	public static readonly RULE_for_structure_in = 32;
	public static readonly RULE_for_iterator = 33;
	public static readonly RULE_while_structure = 34;
	public static readonly RULE_switch_structure = 35;
	public static readonly RULE_switch_cases = 36;
	public static readonly RULE_switch_pattern_case = 37;
	public static readonly RULE_switch_default_case = 38;
	public static readonly RULE_local_block = 39;
	public static readonly RULE_expression = 40;
	public static readonly RULE_expression_statement = 41;
	public static readonly RULE_conditional_expression = 42;
	public static readonly RULE_conditional_expression_rule = 43;
	public static readonly RULE_disjunction_expression = 44;
	public static readonly RULE_disjunction_expression_rule = 45;
	public static readonly RULE_conjunction_expression = 46;
	public static readonly RULE_conjunction_expression_rule = 47;
	public static readonly RULE_equality_expression = 48;
	public static readonly RULE_equality_expression_rule = 49;
	public static readonly RULE_equality_trailing_pair = 50;
	public static readonly RULE_equal_trailing_pair = 51;
	public static readonly RULE_not_equal_trailing_pair = 52;
	public static readonly RULE_inequality_expression = 53;
	public static readonly RULE_inequality_expression_rule = 54;
	public static readonly RULE_inequality_trailing_pair = 55;
	public static readonly RULE_less_than_equal_trailing_pair = 56;
	public static readonly RULE_less_than_trailing_pair = 57;
	public static readonly RULE_greater_than_equal_trailing_pair = 58;
	public static readonly RULE_greater_than_trailing_pair = 59;
	public static readonly RULE_additive_expression = 60;
	public static readonly RULE_additive_op = 61;
	public static readonly RULE_multiplicative_expression = 62;
	public static readonly RULE_multiplicative_op = 63;
	public static readonly RULE_unary_expression = 64;
	public static readonly RULE_unary_op = 65;
	public static readonly RULE_primary_expression = 66;
	public static readonly RULE_argument_list = 67;
	public static readonly RULE_argument_definition = 68;
	public static readonly RULE_subscript_slice = 69;
	public static readonly RULE_atomic_expression = 70;
	public static readonly RULE_literal_expression = 71;
	public static readonly RULE_literal_number = 72;
	public static readonly RULE_literal_string = 73;
	public static readonly RULE_literal_bool = 74;
	public static readonly RULE_literal_color = 75;
	public static readonly RULE_grouped_expression = 76;
	public static readonly RULE_tuple_expression = 77;
	public static readonly RULE_import_statement = 78;
	public static readonly RULE_break_statement = 79;
	public static readonly RULE_continue_statement = 80;
	public static readonly RULE_var_declaration_stmt = 81;
	public static readonly RULE_tuple_declaration = 82;
	public static readonly RULE_declaration_mode = 83;
	public static readonly RULE_assignment_target = 84;
	public static readonly RULE_assignment_target_attribute = 85;
	public static readonly RULE_assignment_target_subscript = 86;
	public static readonly RULE_assignment_target_name = 87;
	public static readonly RULE_assignment_target_group = 88;
	public static readonly RULE_augassign_op = 89;
	public static readonly RULE_type_specification = 90;
	public static readonly RULE_type_qualifier = 91;
	public static readonly RULE_attributed_type_name = 92;
	public static readonly RULE_template_spec_suffix = 93;
	public static readonly RULE_array_type_suffix = 94;
	public static readonly RULE_type_argument_list = 95;
	public static readonly RULE_name = 96;
	public static readonly RULE_name_load = 97;
	public static readonly RULE_name_store = 98;
	public static readonly RULE_comments = 99;
	public static readonly RULE_comment = 100;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "start_script", "start_expression", "start_comments", "statements", 
		"statement", "compound_statement_with_block", "simple_statement", "compound_assignment", 
		"compound_variable_initialization", "compound_name_initialization", "compound_tuple_initialization", 
		"compound_reassignment", "compound_augassignment", "function_declaration", 
		"parameter_list", "parameter_definition", "type_declaration", "field_definitions", 
		"field_definition", "structure", "structure_statement", "structure_expression", 
		"if_structure", "if_structure_elif", "if_structure_else", "elif_structure", 
		"elif_structure_elif", "elif_structure_else", "else_block", "for_structure", 
		"for_structure_to", "for_structure_in", "for_iterator", "while_structure", 
		"switch_structure", "switch_cases", "switch_pattern_case", "switch_default_case", 
		"local_block", "expression", "expression_statement", "conditional_expression", 
		"conditional_expression_rule", "disjunction_expression", "disjunction_expression_rule", 
		"conjunction_expression", "conjunction_expression_rule", "equality_expression", 
		"equality_expression_rule", "equality_trailing_pair", "equal_trailing_pair", 
		"not_equal_trailing_pair", "inequality_expression", "inequality_expression_rule", 
		"inequality_trailing_pair", "less_than_equal_trailing_pair", "less_than_trailing_pair", 
		"greater_than_equal_trailing_pair", "greater_than_trailing_pair", "additive_expression", 
		"additive_op", "multiplicative_expression", "multiplicative_op", "unary_expression", 
		"unary_op", "primary_expression", "argument_list", "argument_definition", 
		"subscript_slice", "atomic_expression", "literal_expression", "literal_number", 
		"literal_string", "literal_bool", "literal_color", "grouped_expression", 
		"tuple_expression", "import_statement", "break_statement", "continue_statement", 
		"var_declaration_stmt", "tuple_declaration", "declaration_mode", "assignment_target", 
		"assignment_target_attribute", "assignment_target_subscript", "assignment_target_name", 
		"assignment_target_group", "augassign_op", "type_specification", "type_qualifier", 
		"attributed_type_name", "template_spec_suffix", "array_type_suffix", "type_argument_list", 
		"name", "name_load", "name_store", "comments", "comment",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'|BEGIN_BLOCK|'", "'|END_BLOCK|'", "'|END_STATEMENT|'", "'and'", 
		"'as'", "'break'", "'by'", "'const'", "'continue'", "'else'", "'export'", 
		"'false'", "'for'", "'if'", "'import'", "'in'", "'input'", "'method'", 
		"'not'", "'or'", "'series'", "'simple'", "'switch'", "'to'", "'type'", 
		"'true'", "'var'", "'varip'", "'while'", "'('", "')'", "'['", "']'", "'<'", 
		"'>'", "'='", "'=='", "'!='", "'<='", "'>='", "'=>'", "'.'", "','", "':'", 
		"'?'", "'+'", "'-'", "'*'", "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", 
		"'%='", "':='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BEGIN_BLOCK", "END_BLOCK", "END_STATEMENT", "AND", "AS", "BREAK", 
		"BY", "CONST", "CONTINUE", "ELSE", "EXPORT", "FALSE", "FOR", "IF", "IMPORT", 
		"IN", "INPUT", "METHOD", "NOT", "OR", "SERIES", "SIMPLE", "SWITCH", "TO", 
		"TYPE", "TRUE", "VAR", "VARIP", "WHILE", "LPAR", "RPAR", "LSQB", "RSQB", 
		"LESS", "GREATER", "EQUAL", "EQEQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", 
		"RARROW", "DOT", "COMMA", "COLON", "QUESTION", "PLUS", "MINUS", "STAR", 
		"SLASH", "PERCENT", "PLUSEQUAL", "MINEQUAL", "STAREQUAL", "SLASHEQUAL", 
		"PERCENTEQUAL", "COLONEQUAL", "NAME", "NUMBER", "STRING", "COLOR", "NEWLINE", 
		"WS", "COMMENT", "ERROR_TOKEN",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PinescriptParser._LITERAL_NAMES, PinescriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PinescriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PinescriptParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return PinescriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PinescriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PinescriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PinescriptParser.RULE_start);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 202;
			this.start_script();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public start_script(): Start_scriptContext {
		let _localctx: Start_scriptContext = new Start_scriptContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PinescriptParser.RULE_start_script);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 205;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PinescriptParser.BREAK) | (1 << PinescriptParser.CONST) | (1 << PinescriptParser.CONTINUE) | (1 << PinescriptParser.EXPORT) | (1 << PinescriptParser.FALSE) | (1 << PinescriptParser.FOR) | (1 << PinescriptParser.IF) | (1 << PinescriptParser.IMPORT) | (1 << PinescriptParser.INPUT) | (1 << PinescriptParser.METHOD) | (1 << PinescriptParser.NOT) | (1 << PinescriptParser.SERIES) | (1 << PinescriptParser.SIMPLE) | (1 << PinescriptParser.SWITCH) | (1 << PinescriptParser.TYPE) | (1 << PinescriptParser.TRUE) | (1 << PinescriptParser.VAR) | (1 << PinescriptParser.VARIP) | (1 << PinescriptParser.WHILE) | (1 << PinescriptParser.LPAR))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (PinescriptParser.LSQB - 32)) | (1 << (PinescriptParser.PLUS - 32)) | (1 << (PinescriptParser.MINUS - 32)) | (1 << (PinescriptParser.NAME - 32)) | (1 << (PinescriptParser.NUMBER - 32)) | (1 << (PinescriptParser.STRING - 32)) | (1 << (PinescriptParser.COLOR - 32)))) !== 0)) {
				{
				this.state = 204;
				this.statements();
				}
			}

			this.state = 207;
			this.match(PinescriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public start_expression(): Start_expressionContext {
		let _localctx: Start_expressionContext = new Start_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PinescriptParser.RULE_start_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 209;
			this.expression();
			this.state = 211;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PinescriptParser.END_STATEMENT) {
				{
				this.state = 210;
				this.match(PinescriptParser.END_STATEMENT);
				}
			}

			this.state = 213;
			this.match(PinescriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public start_comments(): Start_commentsContext {
		let _localctx: Start_commentsContext = new Start_commentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PinescriptParser.RULE_start_comments);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 216;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PinescriptParser.COMMENT) {
				{
				this.state = 215;
				this.comments();
				}
			}

			this.state = 218;
			this.match(PinescriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statements(): StatementsContext {
		let _localctx: StatementsContext = new StatementsContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PinescriptParser.RULE_statements);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 221;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 220;
				this.statement();
				}
				}
				this.state = 223;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PinescriptParser.BREAK) | (1 << PinescriptParser.CONST) | (1 << PinescriptParser.CONTINUE) | (1 << PinescriptParser.EXPORT) | (1 << PinescriptParser.FALSE) | (1 << PinescriptParser.FOR) | (1 << PinescriptParser.IF) | (1 << PinescriptParser.IMPORT) | (1 << PinescriptParser.INPUT) | (1 << PinescriptParser.METHOD) | (1 << PinescriptParser.NOT) | (1 << PinescriptParser.SERIES) | (1 << PinescriptParser.SIMPLE) | (1 << PinescriptParser.SWITCH) | (1 << PinescriptParser.TYPE) | (1 << PinescriptParser.TRUE) | (1 << PinescriptParser.VAR) | (1 << PinescriptParser.VARIP) | (1 << PinescriptParser.WHILE) | (1 << PinescriptParser.LPAR))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (PinescriptParser.LSQB - 32)) | (1 << (PinescriptParser.PLUS - 32)) | (1 << (PinescriptParser.MINUS - 32)) | (1 << (PinescriptParser.NAME - 32)) | (1 << (PinescriptParser.NUMBER - 32)) | (1 << (PinescriptParser.STRING - 32)) | (1 << (PinescriptParser.COLOR - 32)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PinescriptParser.RULE_statement);
		try {
			let _alt: number;
			this.state = 238;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 225;
				this.compound_statement_with_block();
				this.state = 229;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 226;
						this.match(PinescriptParser.END_BLOCK);
						}
						}
					}
					this.state = 231;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				}
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 232;
				this.simple_statement();
				this.state = 233;
				this.match(PinescriptParser.END_STATEMENT);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 235;
				this.compound_assignment();
				this.state = 236;
				this.match(PinescriptParser.END_STATEMENT);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compound_statement_with_block(): Compound_statement_with_blockContext {
		let _localctx: Compound_statement_with_blockContext = new Compound_statement_with_blockContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PinescriptParser.RULE_compound_statement_with_block);
		try {
			this.state = 243;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 240;
				this.function_declaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 241;
				this.type_declaration();
				}
				break;
